--- a/Conversions/Conversions.csproj
+++ b/Conversions/Conversions.csproj
@@ -7,11 +7,14 @@
   <ItemGroup>
     <Compile Include="..\CoinsApi\Controllers\ChangeController.cs" Link="Models\ChangeController.cs" />
     <Compile Include="..\CoinsApi\Models\Change.cs" Link="Models\Change.cs" />
+    <Compile Include="..\CoinsApi\Models\QuoContext.cs" Link="Models\QuoContext.cs" />
     <Compile Include="..\CoinsApi\Models\Quotation.cs" Link="Models\Quotation.cs" />
     <Compile Include="..\CoinsApi\Models\Result.cs" Link="Models\Result.cs" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.1" />
     <PackageReference Include="NewtonSoft.Json" Version="12.0.3" />
   </ItemGroup>
 
